@@ -1,4 +1,4 @@
-AC_INIT(fuse-kernel, 2.4.1)
+AC_INIT(fuse-kernel, 2.5.0-pre0)
 AC_CONFIG_HEADERS([config.h])
 
 AC_PROG_INSTALL
