@@ -1,3 +1,8 @@
+2005-10-26  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Add ACCESS operation.  This is called from the access() system
+	call if 'default_permissions' mount option is not given
+
 2005-10-18  Miklos Szeredi <miklos@szeredi.hu>
 
 	* lib: optimize buffer reallocation in fill_dir.
